tests/error/errors_on_usage/if_different_types.err
Guppy compilation failed. Error in file $FILE:10

8:     else:
9:         y = False
10:    return y
              ^
GuppyTypeError: Expected return value of type `int`, got `bool`
